# server/app/Http/Controllers/API/TagController.php
@@ -1,0 +1,215 @@
+<?php
+
+namespace App\Http\Controllers\API;
+
+use App\Http\Controllers\Controller;
+use App\Models\Tag;
+use Illuminate\Http\Request;
+/**
+ * @OA\Schema(
+ *     schema="Tag",
+ *     type="object",
+ *     title="Tag",
+ *     properties={
+ *         @OA\Property(
+ *             property="id",
+ *             type="integer"
+ *         ),
+ *         @OA\Property(
+ *             property="name",
+ *             type="string"
+ *         )
+ *     }
+ * )
+ */
+class TagController extends Controller
+{
+    /**
+     * @OA\Get(
+     *     path="/api/tags",
+     *     tags={"Tags"},
+     *     summary="Retrieve all tags",
+     *     description="Returns a list of all tags in the system.",
+     *     operationId="getTags",
+     *     @OA\Response(
+     *         response=200,
+     *         description="Successful operation",
+     *         @OA\JsonContent(
+     *             type="array",
+     *             @OA\Items(ref="#/components/schemas/Tag")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=500,
+     *         description="Internal Server Error"
+     *     )
+     * )
+     */
+    public function index()
+    {
+        $tags = Tag::all();
+        return response()->json($tags);
+    }
+
+    /**
+     * @OA\Post(
+     *     path="/api/tags",
+     *     tags={"Tags"},
+     *     summary="Create a new tag",
+     *     description="Stores a new tag in the database and returns the newly created tag.",
+     *     operationId="addTag",
+     *     @OA\RequestBody(
+     *         required=true,
+     *         description="Data required to create a new tag",
+     *         @OA\JsonContent(
+     *             required={"name"},
+     *             @OA\Property(property="name", type="string", description="Unique name of the tag"),
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=201,
+     *         description="Tag created successfully",
+     *         @OA\JsonContent(
+     *             ref="#/components/schemas/Tag"
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=400,
+     *         description="Invalid input, data validation failed"
+     *     ),
+     *     @OA\Response(
+     *         response=500,
+     *         description="Internal server error"
+     *     )
+     * )
+     */
+    public function store(Request $request)
+    {
+        $request->validate(
+          [
+              'name' => 'required|string|unique:tags,name',
+          ]
+        );
+        $tag= Tag::create($request->all());
+        return response()->json($tag,201);
+    }
+
+    /**
+     * @OA\Get(
+     *     path="/api/tags/{id}",
+     *     tags={"Tags"},
+     *     summary="Get a specific tag",
+     *     description="Retrieves a specific tag by its unique identifier and returns the tag details.",
+     *     operationId="getTag",
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         required=true,
+     *         description="Unique identifier of the tag to be retrieved",
+     *         @OA\Schema(
+     *             type="integer"
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Successful operation",
+     *         @OA\JsonContent(ref="#/components/schemas/Tag")
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="Tag not found"
+     *     )
+     * )
+     */
+    public function show(Tag $tag)
+    {
+        return response()->json($tag);
+    }
+
+    /**
+     * @OA\Put(
+     *     path="/api/tags/{id}",
+     *     tags={"Tags"},
+     *     summary="Update a specific tag",
+     *     description="Updates the details of an existing tag and returns the updated tag data.",
+     *     operationId="updateTag",
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         required=true,
+     *         description="Unique identifier of the tag to update",
+     *         @OA\Schema(
+     *             type="integer"
+     *         )
+     *     ),
+     *     @OA\RequestBody(
+     *         required=true,
+     *         description="Data required for updating the tag",
+     *         @OA\JsonContent(
+     *             required={"name"},
+     *             @OA\Property(property="name", type="string", description="Updated name of the tag", example="Updated Tag Name")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Tag updated successfully",
+     *         @OA\JsonContent(ref="#/components/schemas/Tag")
+     *     ),
+     *     @OA\Response(
+     *         response=400,
+     *         description="Invalid input, data validation failed"
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="Tag not found"
+     *     ),
+     *     @OA\Response(
+     *         response=500,
+     *         description="Internal server error"
+     *     )
+     * )
+     */
+    public function update(Request $request, Tag $tag)
+    {
+        $request->validate([
+            'name' => 'required|string|unique:tags,name,' . $tag->id,
+        ]);
+
+        $tag->update($request->all());
+        return response()->json($tag);
+    }
+    /**
+     * @OA\Delete(
+     *     path="/api/tags/{id}",
+     *     tags={"Tags"},
+     *     summary="Delete a specific tag",
+     *     description="Deletes a tag by its unique identifier and returns no content.",
+     *     operationId="deleteTag",
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         required=true,
+     *         description="Unique identifier of the tag to be deleted",
+     *         @OA\Schema(
+     *             type="integer"
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=204,
+     *         description="No content, tag successfully deleted"
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="Tag not found"
+     *     ),
+     *     @OA\Response(
+     *         response=500,
+     *         description="Internal server error"
+     *     )
+     * )
+     */
+    public function destroy(Tag $tag)
+    {
+        $tag->delete();
+        return response()->json(null, 204);    }
+}
